# data-loader-backend

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
exhauster/: initial.json  manage.py  mapping.json
exhauster/data_loader/: consumer.py  measure.json  models.py  serializers.py  utils.py  views.py
exhauster/data_loader/management/commands/: start_data_load.py
exhauster/data_loader/migrations/: 0001_initial.py  0002_alter_metric_measure.py  0003_alter_exhauster_last_replacement_date.py
exhauster/exhauster/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
